# gen/site/oas_request_encoders_gen.go
@@ -79,3 +79,17 @@ func encodeSiteUserUpdateMeRequest(
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
 	return nil
 }
+
+func encodeSiteWorkspacesUpdateRequest(
+	req *SiteUpdateWorkspaceInput,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
