# gen/site/oas_validators_gen.go
@@ -477,3 +477,19 @@ func (s *SiteWorkspaceResource) Validate() error {
 	}
 	return nil
 }
+
+func (s *SiteWorkspacesUpdateNotFound) Validate() error {
+	alias := (*ProblemDetails)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (s *SiteWorkspacesUpdateUnprocessableEntity) Validate() error {
+	alias := (*ProblemDetails)(s)
+	if err := alias.Validate(); err != nil {
+		return err
+	}
+	return nil
+}
